Enhance `Value`'s representation of a "set of values"